# wasmship

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/examples/: uds-server.rs  uds.rs
client/src/: client.rs  command.rs  main.rs
client/src/command/: run.rs
crates/moudle/: Cargo.toml
crates/moudle/src/: lib.rs  types.rs
daemon/: Cargo.toml
daemon/src/: daemon.rs
wasmship/: Cargo.toml
wasmshipd/: Cargo.toml
wasmshipd/src/wasmshipd/: lib.rs
wasmshipd/src/wasmshipd/modules/: mod.rs  repositories.rs  types.rs
wasmshipd/src/wasmshipd/runtime/: mod.rs  types.rs  wasmtime.rs
wasmshipd/tests/modules/: repositories.json
wasmshipd/tests/modules/3bf1c446f992d9d48096234eea699be44930ae62bd53630140a621dd04c76c92/: module.json  module.wasm
