[package]
name = "wasmship-lib"
version = "0.1.0"
edition = "2021"
default-run = "wasmship"

[lib]
doctest = false

[[bin]]
name = "wasmship"
path = "src/bin/wasmship.rs"
doc = false

[dependencies]
daemon = { path = "./daemon" }


[workspace]
members = [
    "client",
    "daemon",
    "library/moudle",
    "library/runtime",
    "library/storage",
    "library/core"
]

[[example]]
name = "lib-run-wasm"