[package]
name = "wasmship-lib"
version = "0.1.0"
edition = "2021"
default-run = "wasmship"

[lib]
doctest = false

[[bin]]
name = "wasmship"
path = "src/bin/wasmship.rs"
doc = false

[dependencies]
daemon = { path = "./daemon" }
#hyper = "0.14"
#hyperlocal = "0.8"
#tokio = { version = "1", features = ["full"] }


[workspace]
members = [
    "client",
    "daemon",
    "library/moudle",
    "library/runtime",
    "library/storage",
]

[[example]]
name = "lib-run-wasm"