[package]
name = "wasmship-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moudle = { path = "../library/moudle" }
storage = { path = "../library/storage" }
tokio = { version = "1", features = ["full"] }
clap = "3.0.0-beta.2"
hyperlocal = "0.8"
hyper = "0.14"
async-trait = "0.1"

[[example]]
name = "uds"