[package]
name = "wasmship-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moudle = { path = "../crates/moudle" }
storage = { path = "../crates/storage" }
tokio = { version = "1", features = ["full"] }
clap = "3.0.0-beta.2"
hyper = "0.14"
async-trait = "0.1"

[target.'cfg(unix)'.dependencies]
hyperlocal = "0.8"

[target.'cfg(windows)'.dependencies]

[[example]]
name = "uds"