[package]
name = "wasmshipd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wasmshipd"
path = "src/wasmshipd/lib.rs"

[[bin]]
name = "wasmshipd"
test = false
doc = false

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.16"
data-encoding = "2.3"

wasmtime = "0.31"
